--- a/HTML/resources-page.html
+++ b/HTML/resources-page.html
@@ -39,7 +39,7 @@
     <header>
         <div class="widewrapper masthead">
             <div class="container">
-                <a href="home-page.html" id="logo">
+                <a href="index.html" id="logo">
                     Cornerstone 2k16
                 </a>
 
