--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								<ul class="tales-list">
 									<a id="logo">
 										<!--UNI logo-->
-										<img src="img/UNIlogo.png">
+										<img src="img/uni-logo.png">
 									</a>
 									<p>
 									<br>
