--- a/html_bucket_class_recaps/main-page-test-post-1.html
+++ b/html_bucket_class_recaps/main-page-test-post-1.html
@@ -114,7 +114,7 @@
 						
 						<div class="body">
                             <p>This is a test post. Below is a YouTube video &#40;hopefully&#41;. Theoretically I would put what happened in class. This was done manually</p>
-							<iframe width="640" height="385" src="https://www.youtube.com/embed/CN1OV9fh3uI" frameborder="0" allowfullscreen></iframe>
+							<div class="video-container"><iframe width="640" height="385" src="https://www.youtube.com/embed/CN1OV9fh3uI" frameborder="0" allowfullscreen></iframe></div>
 						</div>
                     </article>
                 </div>
