--- a/html_bucket_class_recaps/main-page-test-post-1.html
+++ b/html_bucket_class_recaps/main-page-test-post-1.html
@@ -33,7 +33,7 @@
     <![endif]-->
 
     <script src="//code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script>window.jQuery || document.write('<script src="node_modules/jquery/dist/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="../node_modules/jquery/dist/jquery.min.js"><\/script>')</script>
 </head>
 <body>
     <header>
@@ -65,7 +65,6 @@
                         </ul>
                     </div>
                 </nav>        
-
             </div>
         </div>
 
@@ -209,24 +208,6 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="modules/modernizr/modernizr-custom.js"></script>
 </body>
-
-<!-- This is the style for the table being used -->
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 15px;
-}
-</style>
-</head>
-<body>
-
-</html>
 
 
 
