confirmed fixed bootstrap nav issue, and worked around jekyll file naming for images

--- a/html_bucket_class_recaps/main-page-test-post-2.html
+++ b/html_bucket_class_recaps/main-page-test-post-2.html
@@ -133,7 +133,7 @@
                             <ul class="tales-list">
                                 <a id="logo">
 									<!--UNI logo-->
-									<img src="../img/UNIlogo.png">
+									<img src="../img/uni-logo.png">
 								</a>
 								<p>
 								<br>
@@ -205,26 +205,9 @@
         </div>
     </footer>
     
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="modules/modernizr/modernizr-custom.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../modules/modernizr/modernizr-custom.js"></script>
 </body>
-
-<!-- This is the style for the table being used -->
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 15px;
-}
-</style>
-</head>
-<body>
-
 </html>
 
 
