--- a/resources-page.html
+++ b/resources-page.html
@@ -150,7 +150,7 @@
                             <ul class="tales-list">
                                 <a id="logo">
 									<!--UNI logo-->
-									<img src="img/UNIlogo.png">
+									<img src="img/uni-logo.png">
 								</a>
 								<p>
 								<br>
