forgot title to hide

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 					 </div>
 				
                     <div class="aside-widget">
-                        <header>
+                        <header div class="mobileHide">
                             <h3>Keep up with the class on twitter</h3>
                         </header>
                         <div class="mobileHide">
