--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 					 </div>
 				
                     <div class="aside-widget">
-                        <header div class="mobileHide">
+                        <header class="mobileHide">
                             <h3>Keep up with the class on twitter</h3>
                         </header>
                         <div class="mobileHide">
@@ -214,6 +214,18 @@
 	   and (min-device-width : 320px)
 	   and (max-device-width : 480px){  .mobileHide { display: none;}}
 	</style>
+	
+	<!-- Google analytics !-->
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-79836648-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 
     
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
