--- a/index.html
+++ b/index.html
@@ -145,14 +145,15 @@
 							</div>
 					 </div>
 				
-                    <div class="aside-widget" class="mobileHide">
-                        <header>
-                            <h3>Keep up with the class on twitter</h3>
-                        </header>
-						<div class="body">
-							<div class="mobileHide">
-								<a class="twitter-timeline"  href="https://twitter.com/cornerstone2k16" data-widget-id="746886049851310080">Tweets by Cornerstone 2k16</a>
-								<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                    <div class="aside-widget">
+							<header>
+								<h3>Keep up with the class on twitter</h3>
+							</header>
+							<div class="body">
+								<div>
+									<a class="twitter-timeline"  href="https://twitter.com/cornerstone2k16" data-widget-id="746886049851310080">Tweets by Cornerstone 2k16</a>
+									<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+								</div>
 							</div>
 						</div>
                     </div>
