--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 					 </div>
 				
                     <div class="aside-widget">
+						<div class="mobileHide">
 							<header>
 								<h3>Keep up with the class on twitter</h3>
 							</header>
