centered website objective

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 						<header>
 							<h3>Website objective</h3>
 						</header>
-						<div class="body">
-							<a id="logo"> <img src="img/uni-logo.png" align="middle"></a>
+						<div class="body" align="middle">
+							<a id="logo"> <img src="img/uni-logo.png"></a>
 							<p>
 								<br>  <!-- <br> is new line -->
 								The purpose of this website is to keep you up to date with what we do in class, 
