--- a/index.html
+++ b/index.html
@@ -145,12 +145,7 @@
 							</header>
 							<div class="body">
 								<div>
-									<a class="twitter-timeline"  href="https://twitter.com/cornerstone2k16" data-widget-id="746886049851310080">Tweets by Cornerstone 2k16</a>
-									<script>
-										!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id))
-										{js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}
-										(document,"script","twitter-wjs");
-									</script>
+								<a class="twitter-timeline" data-height="700" data-theme="dark" href="https://twitter.com/cornerstone2k16">Tweets by cornerstone2k16</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 								</div>
 							</div>
 						</div>
@@ -208,6 +203,26 @@
 	   and (min-device-width : 320px)
 	   and (max-device-width : 480px){  .mobileHide { display: none;}}
 	</style>
+	
+	<!-- Twitter script for timeline functionality !-->
+	<script>window.twttr = (function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0],
+		t = window.twttr || {};
+		if (d.getElementById(id)) return t;
+		js = d.createElement(s);
+		js.id = id;
+		js.src = "https://platform.twitter.com/widgets.js";
+		fjs.parentNode.insertBefore(js, fjs);
+ 
+		t._e = [];
+		t.ready = function(f) {
+		t._e.push(f);
+		};
+ 
+		return t;
+		}(document, "script", "twitter-wjs"));
+	</script>
+	
 	
 	<!-- Google analytics !-->
 	<script>
