updated readme and fixed footer link to redirect to github

--- a/events-page.html
+++ b/events-page.html
@@ -189,7 +189,7 @@
 		
         <div class="widewrapper copyright">
             <div class="container">
-                Designed by Justice Adams
+                <a href="https://github.com/justiceadamsUNI/justiceadamsUNI.github.io" target="_blank">Designed By Justice Adams</a>
             </div>
         </div>
     </footer>
