--- a/pyhon_gen_scripts/blog-post-skeleton.html
+++ b/pyhon_gen_scripts/blog-post-skeleton.html
@@ -191,7 +191,7 @@
 		
         <div class="widewrapper copyright">
             <div class="container">
-                Designed by Justice Adams
+                <a href="https://github.com/justiceadamsUNI/justiceadamsUNI.github.io" target="_blank">Designed By Justice Adams</a>
             </div>
         </div>
     </footer>
