updated introduction posts

--- a/recaps-page.html
+++ b/recaps-page.html
@@ -98,7 +98,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated 23 June 2016</span>
+                                        <span class="data">Last Updated: 12 August 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -141,7 +141,7 @@
                                 <li><a>Recaps</a></li>
                                 <li><a>Cornerstone</a></li>
                                 <li><a>UNI</a></li>
-								<li><a>Every Class/a></li>                       
+								<li><a>Every Class</a></li>                       
                             </ul>
                         </div>
                     </div>
