--- a/events-page.html
+++ b/events-page.html
@@ -98,7 +98,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated 11 June 2016</span>
+                                        <span class="data">Last Updated: 11 June 2016</span>
                                     </div>                        
                                 </div>
                             </div>
