--- a/resources-page.html
+++ b/resources-page.html
@@ -99,7 +99,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">4 June 2016</span>
+                                        <span class="data">Last Updated: 12 August 2016</span>
                                     </div>                        
                                 </div>
                             </div>
