Created recap for 8/22 and fixed mispelling of useful.
Closes #23

--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 12 August 2016</span>
+                                        <span class="data">Last Updated: 22 August 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,8 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
-                                <li><a href="html_bucket_class_recaps/main-page-test-post-1.html">12/12/12 We watched spongebob in class.</a></li>
-                                <li><a href="html_bucket_class_recaps/main-page-test-post-2.html">12/12/12 We prayed for Kanyes forgiveness in class</a></li>
+                                <li><a href="html_bucket_class_recaps/8-22-class-recap.html">8/22/16 We did some introductory stuff, and wrote a bit.</a></li>
                             </ul>
 						</div>
                     </article>
@@ -166,7 +165,7 @@
                     </div>
 
                     <div class="col-md-4 footer-widget">
-                        <h3> <i class="fa fa-external-link" aria-hidden="true"></i> Usefull links for you</h3>
+                        <h3> <i class="fa fa-external-link" aria-hidden="true"></i> Useful links for you</h3>
                         <ul class="tales-list">
                             <li><a href="https://myuniverse.uni.edu">My Universe</a></li>
                             <li><a href="https://www.uni.edu/">UNI Homepage.</a></li>
