--- a/resources-page.html
+++ b/resources-page.html
@@ -186,7 +186,7 @@
                     </div>
 
                     <div class="col-md-4 footer-widget">
-                        <h3> <i class="fa fa-external-link" aria-hidden="true"></i> Usefull links for you</h3>
+                        <h3> <i class="fa fa-external-link" aria-hidden="true"></i> Useful links for you</h3>
                         <ul class="tales-list">
                             <li><a href="https://myuniverse.uni.edu">My Universe</a></li>
                             <li><a href="https://www.uni.edu/">UNI Homepage.</a></li>
