--- a/html_bucket_other_posts/Welcome-to-Cornerstone!.html
+++ b/html_bucket_other_posts/Welcome-to-Cornerstone!.html
@@ -158,8 +158,8 @@
                         <div class="body clearfix">
                             <ul class="tags">
                                 <li><a>First Year</a></li> 
-<li><a>Cornerstone</a></li> 
-<li><a>Welcome</a></li> 
+								<li><a>Cornerstone</a></li> 
+								<li><a>Welcome</a></li> 
                       
                             </ul>
                         </div>
@@ -182,7 +182,7 @@
                     </div>
 
                     <div class="col-md-4 footer-widget">
-                        <h3> <i class="fa fa-external-link" aria-hidden="true"></i> Usefull links for you</h3>
+                        <h3> <i class="fa fa-external-link" aria-hidden="true"></i> Useful links for you</h3>
                         <ul class="tales-list">
                             <li><a href="https://myuniverse.uni.edu">My Universe</a></li>
                             <li><a href="https://www.uni.edu/">UNI Homepage.</a></li>
