update events page and fixed typo

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 11 June 2016</span>
+                                        <span class="data">Last Updated: 28 August 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -110,13 +110,29 @@
 						<div class="body">
 							 <p>
 								This page will get updated every week with new campus events for you to go to. Keep updated with all events taking place on campus
-								which you are more then welcome to use for your campus engagements. If you have any questions about times/locations feel free to
-								contact me and I'll help you find the answers!
+								which you are more than welcome to use for your campus engagements. If you have any questions about times/locations feel free to
+								contact me and I'll help you find the answers! (Some events don't have links)
 							 </p>
 							 <ul class="tales-list">
-                                <li><a href="#">Fake Event. Link won't work</a></li>
-                                <li><a href="#">Fake Event 2. Link won't work</a></li>
-                                <li><a href="#">Fake Events are fun.</a></li>
+                                <li>ALL WEEK: "Nocturnes: Night Skies in Nineteenth-Century Art and the Darker Side of Modern Art" , UNI Gallery of Art ,  Gallery hours: 10 a.m. to 7 p.m., Mon. through Thurs.; noon to 5 p.m., Fri. and Sat</a></li>
+                                <li>ALL WEEK: "Illuminating Manuscripts", UNI Gallery of Art, Monday, August 22, 2016 - 10:00 am to Saturday, October 15, 2016 - 5:00 pm</a></li>
+                                <li><a href="http://uni.edu/studentlife/fsl-fraternity-recruitment">ALL WEEK: Fraternity recruitment, Location (???), Wednesday, August 24, 2016 (All day) to Friday, September 2, 2016 (All day) </a></li>
+								<li>8/29: Women In Computing meeting, ITTC 322 at 5:00pm</a></li>
+								<li>8/30: Gallery Talk: Dr. Alice M. Phillips, UNI Gallery of Art,  Tuesday, August 30, 2016 - 6:00 pm</a></li>
+                                <li>8/30: Popsicle social for education majors, Campanile, Tuesday, August 30, 2016 - 7:00 pm</a></li>
+                                <li><a href="http://www.uni.edu/music/events">8/30: Faculty Artist Recital: Randy Grabowski- trumpet, Bengtson Auditorium, Russell Hall, Tuesday, August 30, 2016 - 7:30 pm</a></li>
+                                <li><a href="http://www.uni.edu/ceee/resources/steingraber">8/31: UNI Reads - Sandra Steingraber, Scholar Space, Rod Library, Wednesday, August 31, 2016 - 12:00 pm</a></li>
+								<li><a href="http://www.physics.uni.edu/sites/default/files/yan8-31-16.pdf">8/31: Physics Colloquium, Room 114, Begeman Hall, Wednesday, August 31, 2016 - 4:00 pm</a></li>	
+								<li>8/31: Rainbow Reception, GBPAC, Wednesday, August 31, 2016 - 5:00 pm to 7:00 pm</a></li>	
+								<li>8/31: CAB: Mario Kart,  Maucker Union, Wednesday, August 31, 2016 - 7:00 pm</a></li>
+								<li>9/1: Thursday lunchtime cribbage, Rod Library, Thursday, September 1, 2016 - 12:00 pm</a></li>
+								<li>9/1: Computer Club meeting, 5:00 PM in ITT 322</a></li>		
+								<li>9/1: Prelaw Club meeting, Room 23, Sabin Hall, Thursday, September 1, 2016 - 5:00 pm</a></li>	
+								<li><a href="https://www.facebook.com/events/636122703214184/">9/1: UNI English Club meeting, Thompson Commons, Bartlett Hall, Thursday, September 1, 2016 - 6:00 pm</a></li>	
+								<li><a href="http://www.uni.edu/music/events">9/1: Faculty Artist Recital: Anthony Williams, trombone, Bengtson Auditorium, Russell Hall, Thursday, September 1, 2016 - 7:30 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/observatory-visit">9/1: Observatory Show, Room 137, McCollum Science Hall, Thursday, September 1, 2016 - 9:00 pm to 10:00 pm</a></li>	
+								<li>Friday and Saturday: No unique events besides the "all week" events</a></li>
+								<li><a href="http://admin.unipanthers.com/schedule.aspx?path=wsoc">9/4: NI Womens Soccer vs. South Dakota, Waterloo Youth Soccer Complex, Sunday, September 4, 2016 - 1:00 pm</a></li>			
                             </ul>
 						</div>
                     </article>
@@ -180,7 +196,7 @@
 
                     <div class="col-md-4 footer-widget">
                         <h3> <i class="fa fa-envelope"></i>Contact Us</h3>
-                        <span>Feel free to contact me or nick with any questions/comments you may have! We're here to help.</span>
+                        <span>Feel free to contact Nick or me with any questions/comments you may have! We're here to help.</span>
                         <span class="email">
                             <a href="mailto:adamsjal@uni.edu">E-mail me - adamsjal@uni.edu</a> <br/>  <!--new line between e-mails with br tag-->
 							<a href="mailto:nick.roos@uni.edu">E-mail Nick - nick.roos@uni.edu</a>
