Closes #26 fixed typos

--- a/html_bucket_class_recaps/8-22-class-recap.html
+++ b/html_bucket_class_recaps/8-22-class-recap.html
@@ -194,7 +194,7 @@
 
                     <div class="col-md-4 footer-widget">
                         <h3> <i class="fa fa-envelope"></i>Contact Us</h3>
-                        <span>Feel free to contact me or nick with any questions/comments you may have! We're here to help.</span>
+                        <span>Feel free to contact Nick or me with any questions/comments you may have! We're here to help.</span>
                         <span class="email">
                             <a href="mailto:adamsjal@uni.edu">E-mail me - adamsjal@uni.edu</a> <br/>  <!--new line between e-mails with br tag-->
 							<a href="mailto:nick.roos@uni.edu">E-mail Nick - nick.roos@uni.edu</a>
