updated the class recaps page

--- a/recaps-page.html
+++ b/recaps-page.html
@@ -113,6 +113,9 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/8-31-class-recap.html">8/31/16 We spent the entirety of the class watching a play in Strayer-Wood</a></li>
+								<li><a href="html_bucket_class_recaps/8-29-class-recap.html">8/29/16 Today we had a lengthy discussion about the meaning of our favorite stories.</a></li>
+								<li><a href="html_bucket_class_recaps/8-26-class-recap.html">8/26/16 Today in class we watched a movie abot the deconstruction of education.</a></li>
 								<li><a href="html_bucket_class_recaps/8-24-class-recap.html">8/24/16 We discussed our learning based memories, and got to know each other better.</a></li>
                                 <li><a href="html_bucket_class_recaps/8-22-class-recap.html">8/22/16 We did some introductory stuff, and wrote a bit.</a></li>
                             </ul>
