week of 9/4 events page updated

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 28 August 2016</span>
+                                        <span class="data">Last Updated: 4 September 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -116,24 +116,21 @@
 							 <ul class="tales-list">
                                 <li>ALL WEEK: "Nocturnes: Night Skies in Nineteenth-Century Art and the Darker Side of Modern Art" , UNI Gallery of Art ,  Gallery hours: 10 a.m. to 7 p.m., Mon. through Thurs.; noon to 5 p.m., Fri. and Sat</a></li>
                                 <li>ALL WEEK: "Illuminating Manuscripts", UNI Gallery of Art, Monday, August 22, 2016 - 10:00 am to Saturday, October 15, 2016 - 5:00 pm</a></li>
-                                <li><a href="http://uni.edu/studentlife/fsl-fraternity-recruitment">ALL WEEK: Fraternity recruitment, Location (???), Wednesday, August 24, 2016 (All day) to Friday, September 2, 2016 (All day) </a></li>
-								<li>8/29: Women In Computing meeting, ITTC 322 at 5:00pm</a></li>
-								<li>8/30: Gallery Talk: Dr. Alice M. Phillips, UNI Gallery of Art,  Tuesday, August 30, 2016 - 6:00 pm</a></li>
-                                <li>8/30: Popsicle social for education majors, Campanile, Tuesday, August 30, 2016 - 7:00 pm</a></li>
-                                <li><a href="http://www.uni.edu/music/events">8/30: Faculty Artist Recital: Randy Grabowski- trumpet, Bengtson Auditorium, Russell Hall, Tuesday, August 30, 2016 - 7:30 pm</a></li>
-                                <li><a href="http://www.uni.edu/ceee/resources/steingraber">8/31: UNI Reads - Sandra Steingraber, Scholar Space, Rod Library, Wednesday, August 31, 2016 - 12:00 pm</a></li>
-								<li><a href="http://www.physics.uni.edu/sites/default/files/yan8-31-16.pdf">8/31: Physics Colloquium, Room 114, Begeman Hall, Wednesday, August 31, 2016 - 4:00 pm</a></li>	
-								<li>8/31: Rainbow Reception, GBPAC, Wednesday, August 31, 2016 - 5:00 pm to 7:00 pm</a></li>	
-								<li>8/31: CAB: Mario Kart,  Maucker Union, Wednesday, August 31, 2016 - 7:00 pm</a></li>
-								<li>9/1: Thursday lunchtime cribbage, Rod Library, Thursday, September 1, 2016 - 12:00 pm</a></li>
-								<li>9/1: Computer Club meeting, 5:00 PM in ITT 322</a></li>		
-								<li>9/1: Prelaw Club meeting, Room 23, Sabin Hall, Thursday, September 1, 2016 - 5:00 pm</a></li>	
-								<li><a href="https://www.facebook.com/events/636122703214184/">9/1: UNI English Club meeting, Thompson Commons, Bartlett Hall, Thursday, September 1, 2016 - 6:00 pm</a></li>	
-								<li><a href="http://www.uni.edu/music/events">9/1: Faculty Artist Recital: Anthony Williams, trombone, Bengtson Auditorium, Russell Hall, Thursday, September 1, 2016 - 7:30 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/observatory-visit">9/1: Observatory Show, Room 137, McCollum Science Hall, Thursday, September 1, 2016 - 9:00 pm to 10:00 pm</a></li>	
-								<li>Friday and Saturday: No unique events besides the "all week" events</a></li>
-								<li><a href="http://admin.unipanthers.com/schedule.aspx?path=wsoc">9/4: NI Womens Soccer vs. South Dakota, Waterloo Youth Soccer Complex, Sunday, September 4, 2016 - 1:00 pm</a></li>			
-                            </ul>
+								<li><a href="http://uni.edu/studentlife/fsl-sorority-recruitment">WEDNESDAY TO SUNDAY: Sorority Recruitment, Wednesday, September 7, 2016 (All day) to Sunday, September 11, 2016 (All day)</a></li>
+								<li><a href="https://www.library.uni.edu/rodcast/201608/career-readiness">8/7: Career Readiness, Rod Library, Wednesday, September 7, 2016 - 10:30 am to 1:30 pm</a></li>	
+								<li><a href="http://admin.unipanthers.com/schedule.aspx?path=wsoct">8/7: UNI Soccer vs. Midland University,  Waterloo Youth Soccer Complex, Wednesday, September 7, 2016 - 6:00 pm</a></li>
+								<li><a href="http://www.uni.edu/ceee/resources/steingraber">8/7: Guest lecturer: Sandra Steingraber, Auditorium, Lang Hall, Wednesday, September 7, 2016 - 7:00 pm</a></li>	
+								<li>8/7: The PRISM Chamber Showcase, Great Hall, GBPAC, Wednesday, September 7, 2016 - 7:30 pm</a></li>
+								<li><a href="https://www.eventbrite.com/e/from-know-how-to-do-now-science-in-action-at-uni-tickets-27176164640">8/8: Conference: From Know-How to Do-Now!, ScholarSpace 301, Thursday, September 8, 2016 - 8:30 am</a></li>	
+								<li><a href="http://www.uni.edu/stemed/stem-resources-uni-faculty-staff">8/8: September STEM Chat, Room 282, Rod Library, Thursday, September 8, 2016 - 12:00 pm to 1:00 pm</a></li>
+								<li>8/8: Thursday Lunchtime Cribbage, Rod Library, Thursday, September 8, 2016 - 12:00 pm</a></li>
+								<li>8/8: Guest Artist Recital: Zach Marley, tuba, Davis Hall, GBPAC, Thursday, September 8, 2016 - 6:00 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 8/8: Observatory Show, Room 137, McCollum Science Hall, Thursday, September 8, 2016 - 9:00 pm to 10:00 pm</a></li>
+								<li>8/9: Guest and Faculty Artist Recital: Matt Wilson, drums with UNI Faculty Artists, Bengtson Auditorium, Russell Hall, Friday, September 9, 2016 - 7:30 pm</a></li>
+								<li>8/10: Football vs. Montana, UNI Dome, Saturday, September 10, 2016 - 4:00 pm</a></li>
+								<li><a href="http://www.unidancemarathon.com/golf-tournament">8/11: FORE The Kids golf tournament, Pheasant Ridge Golf Course, Cedar Falls, Sunday, September 11, 2016 - 10:00 am</a></li>	
+								<li><a href="http://www.tallgrassprairiecenter.org/">8/11: Iowa Prairie Heritage Week Prairie Walk, Trailhead south of Hillside-Jennings Apartments, Sunday, September 11, 2016 - 2:00 pm</a></li>	
+                            </ul
 						</div>
                     </article>
                 </div>
