--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 </header>
 								
                                 <div class="body">
-								  Today we took time to discuss each storie within small groups, then talked as a class. Remember we don't have class monday!
+								  Today we took time to discuss each story within small groups, then talked as a class. Remember we don't have class monday!
                                 <div class="clearfix">
                                     <h3><a href="html_bucket_class_recaps/9-2-class-recap.html" class="btn btn-tales-one">Read More</a>
                                 </div>
