Updated events page

--- a/events-page.html
+++ b/events-page.html
@@ -111,7 +111,8 @@
 							 <p>
 								This page will get updated every week with new campus events for you to go to. Keep updated with all events taking place on campus
 								which you are more than welcome to use for your campus engagements. If you have any questions about times/locations feel free to
-								contact me and I'll help you find the answers! (Some events don't have links)
+								contact me and I'll help you find the answers! (Some events don't have links). It's also worth noting that there are many more events you
+								could go to that would count. So feel free to attend something no on the list!
 							 </p>
 							 <ul class="tales-list">
                                 <li>ALL WEEK: "Nocturnes: Night Skies in Nineteenth-Century Art and the Darker Side of Modern Art" , UNI Gallery of Art ,  Gallery hours: 10 a.m. to 7 p.m., Mon. through Thurs.; noon to 5 p.m., Fri. and Sat</a></li>
