--- a/html_bucket_indexed_homepages/index-posts-5-8.html
+++ b/html_bucket_indexed_homepages/index-posts-5-8.html
@@ -165,7 +165,7 @@
 				
 					 <!-- NAV-BUTTON-FLAG --> 
 					<div class="paging"> <a href="..\index.html" class="newer"><i class="fa fa-long-arrow-left"> 
-					</i> Newer</a> <span>&bull;</span>  <a href="C:\Users\justice\Desktop\justiceadamsUNI.github.io\pyhon_gen_scripts/../html_bucket_indexed_homepages/index-posts-1-4.html" class="older">
+					</i> Newer</a> <span>&bull;</span>  <a href="../html_bucket_indexed_homepages/index-posts-1-4.html" class="older">
 					Older <i class="fa fa-long-arrow-right"></i></a> </div> 
 					<!-- NAV-BUTTON-FLAG -->
 					
