--- a/html_bucket_indexed_homepages/index-posts-1-4.html
+++ b/html_bucket_indexed_homepages/index-posts-1-4.html
@@ -169,7 +169,7 @@
                     </div>
 					
 					 <!-- NAV-BUTTON-FLAG --> 
-					<div class="paging"> <a href="C:\Users\justice\Desktop\justiceadamsUNI.github.io\pyhon_gen_scripts/../html_bucket_indexed_homepages/index-posts-5-8.html" class="newer"><i class="fa fa-long-arrow-left"> </i> Newer</a> </div> 
+					<div class="paging"> <a href="../html_bucket_indexed_homepages/index-posts-5-8.html" class="newer"><i class="fa fa-long-arrow-left"> </i> Newer</a> </div> 
 					<!-- NAV-BUTTON-FLAG -->
 					
                 </div>
