--- a/html_bucket_class_recaps/9-9-class-recap.html
+++ b/html_bucket_class_recaps/9-9-class-recap.html
@@ -124,7 +124,7 @@
 							As we went around and said what we thought, the rest of the class took attendance on thier attendance sheets in order to learn everyone's names better.
 							Nick also talked a bit about the concept of allegory. According to Oxford dictionary allegory is defined as 
 							"A story, poem, or picture which can be interpreted to reveal a hidden meaning, typically a moral or political one".
-							<br><br>Homework for next class Week: 
+							<br><br>Homework for next week: 
 							<br>read the following stories from We Live in Water by Jess Walter:
 							<br>- Anything Helps (pg. 1)
 							<br>- Thief (pg. 41)
