updated events page week of 9/11

--- a/events-page.html
+++ b/events-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 4 September 2016</span>
+                                        <span class="data">Last Updated: 11 September 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -117,20 +117,31 @@
 							 <ul class="tales-list">
                                 <li>ALL WEEK: "Nocturnes: Night Skies in Nineteenth-Century Art and the Darker Side of Modern Art" , UNI Gallery of Art ,  Gallery hours: 10 a.m. to 7 p.m., Mon. through Thurs.; noon to 5 p.m., Fri. and Sat</a></li>
                                 <li>ALL WEEK: "Illuminating Manuscripts", UNI Gallery of Art, Monday, August 22, 2016 - 10:00 am to Saturday, October 15, 2016 - 5:00 pm</a></li>
-								<li><a href="http://uni.edu/studentlife/fsl-sorority-recruitment">WEDNESDAY TO SUNDAY: Sorority Recruitment, Wednesday, September 7, 2016 (All day) to Sunday, September 11, 2016 (All day)</a></li>
-								<li><a href="https://www.library.uni.edu/rodcast/201608/career-readiness">9/7: Career Readiness, Rod Library, Wednesday, September 7, 2016 - 10:30 am to 1:30 pm</a></li>	
-								<li><a href="http://admin.unipanthers.com/schedule.aspx?path=wsoct">9/7: UNI Soccer vs. Midland University,  Waterloo Youth Soccer Complex, Wednesday, September 7, 2016 - 6:00 pm</a></li>
-								<li><a href="http://www.uni.edu/ceee/resources/steingraber">9/7: Guest lecturer: Sandra Steingraber, Auditorium, Lang Hall, Wednesday, September 7, 2016 - 7:00 pm</a></li>	
-								<li>9/7: The PRISM Chamber Showcase, Great Hall, GBPAC, Wednesday, September 7, 2016 - 7:30 pm</a></li>
-								<li><a href="https://www.eventbrite.com/e/from-know-how-to-do-now-science-in-action-at-uni-tickets-27176164640">9/8: Conference: From Know-How to Do-Now!, ScholarSpace 301, Thursday, September 8, 2016 - 8:30 am</a></li>	
-								<li><a href="http://www.uni.edu/stemed/stem-resources-uni-faculty-staff">9/8: September STEM Chat, Room 282, Rod Library, Thursday, September 8, 2016 - 12:00 pm to 1:00 pm</a></li>
-								<li>9/8: Thursday Lunchtime Cribbage, Rod Library, Thursday, September 8, 2016 - 12:00 pm</a></li>
-								<li>9/8: Guest Artist Recital: Zach Marley, tuba, Davis Hall, GBPAC, Thursday, September 8, 2016 - 6:00 pm</a></li>
-								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 9/8: Observatory Show, Room 137, McCollum Science Hall, Thursday, September 8, 2016 - 9:00 pm to 10:00 pm</a></li>
-								<li>9/9: Guest and Faculty Artist Recital: Matt Wilson, drums with UNI Faculty Artists, Bengtson Auditorium, Russell Hall, Friday, September 9, 2016 - 7:30 pm</a></li>
-								<li>9/10: Football vs. Montana, UNI Dome, Saturday, September 10, 2016 - 4:00 pm</a></li>
-								<li><a href="http://www.unidancemarathon.com/golf-tournament">9/11: FORE The Kids golf tournament, Pheasant Ridge Golf Course, Cedar Falls, Sunday, September 11, 2016 - 10:00 am</a></li>	
-								<li><a href="http://www.tallgrassprairiecenter.org/">9/11: Iowa Prairie Heritage Week Prairie Walk, Trailhead south of Hillside-Jennings Apartments, Sunday, September 11, 2016 - 2:00 pm</a></li>	
+								<li><a href="https://www.library.uni.edu/rodcast/201609/takes-iowan">ALL WEEK: It Takes an Iowan, Marshall Center School (corner of W. 23rd and Indiana Streets), Friday, September 9, 2016 - 10:00 am to Saturday, October 8, 2016 - 4:00 pm</a></li>
+								<li><a href="http://www.uni.edu/ceee/resources/newsevents#enhance">9/12: Enhance Your College Experience, Rod Library 286 Makerspace Rm, Monday, September 12, 2016 - 10:00 am</a></li>
+								<li><a href="https://www.facebook.com/UniFinancialLiteracyClub/?ref=aymt_homepage_panel">9/12: Financial Literacy Club kickoff, Old Central Ballroom, Maucker Union, Monday, September 12, 2016 - 6:00 pm to 7:30 pm</a></li>
+								<li>9/13: UNI Volleyball vs. Iowa State, McLeod Center, Tuesday, September 13, 2016 - 7:00 pm</a></li>
+								<li><a href="http://www.uni.edu/ethics/current-events">9/13: Guest Lecturer: Brad Agle, Location TBA, Tuesday, September 13, 2016 - 7:00 pm</a></li>
+								<li>9/13: Faculty Recital: Tina Su, horn, with Polina Khatsko, piano and Ross Winter, violin, Davis Hall, GBPAC, Tuesday, September 13, 2016 - 8:00 pm</a></li>
+								<li><a href="http://www.tallgrassprairiecenter.org/">9/14: Prairie On Farms Field Day, Randy Luze Farm, 5718 12th Ave, Dysart, IA 52224, Wednesday, September 14, 2016 - 9:00 am to 1:00 pm</a></li>
+								<li><a href="http://studyabroad.uni.edu/index.cfm?FuseAction=Abroad.ViewLink&Parent_ID=0&Link_ID=FD93CB0F-5056-BA1F-71BE34B5B61BC2F4">9/14: Study Abroad Fair, Old Central Ballroom, Maucker Union, Wednesday, September 14, 2016 - 11:00 am to 3:00 pm</a></li>
+								<li><a href="http://www.physics.uni.edu/sites/default/files/tabei9-14-16.pdf">9/14: Physics Colloquium, Room 114, Begeman Hall, Wednesday, September 14, 2016 - 4:00 pm</a></li>
+								<li>9/15: Visiting ceramic sculptor Jason Briggs, Room 126, Kamerick Art Building, Thursday, September 15, 2016 - 9:30 am</a></li>
+								<li>9/15: Wayson Chiropractic Presentation, Rooms 007/009, Gilchrist Hall, Thursday, September 15, 2016 - 12:00 pm</a></li>
+								<li>9/15: Visiting ceramic sculptor Jason Briggs, Room 111, Kamerick Art Building, Thursday, September 15, 2016 - 7:15 pm</a></li>
+								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 9/15: Observatory Show, Room 137, McCollum Science Hall, Thursday, September 15, 2016 - 9:00 pm to 10:00 pm</a></li>
+								<li><a href="http://www.tallgrassprairiecenter.org/">9/16: Prairie On Farms Field Day,ISU Borlaug Learning Center, 3327 290th St, Nashua, IA 50658, Friday, September 16, 2016 - 9:00 am to 12:30 pm</a></li>
+								<li>9/16: Visiting ceramic sculptor Jason Briggs, Room 126, Kamerick Art Building, Thursday, September 16, 2016 - 9:30 am</a></li>
+								<li>9/16: UNI Volleyball vs. Illinois State, McLeod Center, Friday, September 16, 2016 - 5:00 pm</a></li>
+								<li>9/16: Guest Artist Recital: Andrew Dahlke, saxophone, Davis Hall, GBPAC, Friday, September 16, 2016 - 8:00 pm</a></li>
+								<li><a href="https://www.facebook.com/events/599838123528914/">9/17: Explorers of Religion and Philosophy Club picnic, Seerley Park, Saturday, September 17, 2016 - 11:00 am</a></li>
+								<li><a href="http://www.unidancemarathon.com/product-page/6afe3f90-6e5f-a402-7f5a-8141f13cf217">9/17: Miles for Miracles 5K, Alumni House, Saturday, September 17, 2016 - 11:00 am</a></li>
+								<li>9/17: UNI Volleyball vs. Northwestern, McLeod Center, Saturday, September 17, 2016 - 12:00 pm</a></li>
+								<li><a href="http://www.tallgrassprairiecenter.org/">9/17: Iowa Prairie Heritage Week Prairie Walk, Bennington Township Cemetery, Waterloo, Iowa, Saturday, September 17, 2016 - 1:30 pm</a></li>
+								<li>9/17: UNI Volleyball vs. Syracuse, McLeod Center, Saturday, September 17, 2016 - 7:00 pm</a></li>
+								<li><a href="http://admin.unipanthers.com/schedule.aspx?path=wsoct">9/18: UNI Soccer vs. Western Illinois,  Waterloo Youth Soccer Complex, Sunday, September 18, 2016 - 12:00 pm</a></li>
+								<li>9/18: UNI Volleyball vs. North Dakota State, McLeod Center, Sunday, September 18, 2016 - 2:30 pm</a></li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-701/ronnie-milsap.aspx">9/18: Ronnie Milsap, Gallagher Bluedorn Performing Arts Center, Sunday, September 18, 2016 - 7:00 pm</a></li>
                             </ul
 						</div>
                     </article>
