--- a/events-page.html
+++ b/events-page.html
@@ -128,6 +128,11 @@
 								<li><a href="http://www.physics.uni.edu/sites/default/files/tabei9-14-16.pdf">9/14: Physics Colloquium, Room 114, Begeman Hall, Wednesday, September 14, 2016 - 4:00 pm</a></li>
 								<li>9/15: Visiting ceramic sculptor Jason Briggs, Room 126, Kamerick Art Building, Thursday, September 15, 2016 - 9:30 am</a></li>
 								<li>9/15: Wayson Chiropractic Presentation, Rooms 007/009, Gilchrist Hall, Thursday, September 15, 2016 - 12:00 pm</a></li>
+								<li>9/15: Thursday Lunchtime Cribbage, Rod Library, Thursday, September 15, 2016 - 12:00 pm to 1:00 pm</li>
+								<li>9/15: Faculty Artist Lecture: "Strangers in a Strange Land: Spanish Chant Manuscript Leaves in the UNI Permanent Art Collection", UNI Gallery, Thursday, September 15, 2016 - 6:00 pm</li>
+								<li><a href="https://www.uni.edu/studentlife/fsl/nphc">9/15: Meet The Greeks, Oak Room, Maucker Union, Thursday, Thursday, September 15, 2016 - 6:30 pm</li>
+								<li><a href="http://www.gbpac.com/upcoming-events/e-700/george-thorogood--the-destroyers.aspx">9/15: George Thorogood and The Destroyers, Gallagher Bluedorn Performing Arts Center, Thursday, September 15, 2016 - 7:00 pm</a></li>
+								<li>9/15: #MauckerMovies: Keanu, Old Central Ballroom, Maucker Union, Thursday, September 15, 2016 - 7:00 pm</li>
 								<li>9/15: Visiting ceramic sculptor Jason Briggs, Room 111, Kamerick Art Building, Thursday, September 15, 2016 - 7:15 pm</a></li>
 								<li><a href="http://www.uni.edu/earth/content/observatory-visit"> 9/15: Observatory Show, Room 137, McCollum Science Hall, Thursday, September 15, 2016 - 9:00 pm to 10:00 pm</a></li>
 								<li><a href="http://www.tallgrassprairiecenter.org/">9/16: Prairie On Farms Field Day,ISU Borlaug Learning Center, 3327 290th St, Nashua, IA 50658, Friday, September 16, 2016 - 9:00 am to 12:30 pm</a></li>
