--- a/recaps-page.html
+++ b/recaps-page.html
@@ -101,7 +101,7 @@
                                     </div>
                                     <div class="date">
                                         <i class="fa fa-calendar"></i>
-                                        <span class="data">Last Updated: 9 September 2016</span>
+                                        <span class="data">Last Updated: 12 September 2016</span>
                                     </div>                        
                                 </div>
                             </div>
@@ -113,6 +113,7 @@
 								If you ever need to sort specifically by class recaps, you know where to go. 
 							 </p>
 							 <ul class="tales-list">
+								<li><a href="html_bucket_class_recaps/9-12-class-recap.html">9/12/16 We went on a scavanger hunt! It was too legit.</a></li>
 								<li><a href="html_bucket_class_recaps/9-9-class-recap.html">9/9/16 We discussed this weeks story as an entire class. Next week we will read from We Live In Water</a></li>
 								<li><a href="html_bucket_class_recaps/9-7-class-recap.html">9/7/16 We discussed deflection, and how it works within a narrative. We also discussed 5 short stories.</a></li>
 								<li><a href="html_bucket_class_recaps/9-2-class-recap.html">9/2/16 We discussed each story we read as a class. We also discussed it in small groups.</a></li>
