--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
 						<div class="col-md-6 col-sm-6">
                             <article class=" blog-teaser">
                                 <header>
+                                    <img src="img/9-14-recap-icon.png" alt="9-14 class Recap">   <!-- Files ideally should be 123 x 123 px for thumbnails -->
+                                    <h3><a href="html_bucket_class_recaps/9-14-class-recap.html">Wednesday 9/14 Recap</a></h3>
+                                    <span class="meta">14 September 2016, Justice Adams</span>
+									<hr>
+                                </header>
+								
+                                <div class="body">
+								  We talked a bit about politics, and then went outside for class to talk about the stories we read.
+                                <div class="clearfix">
+                                    <h3><a href="html_bucket_class_recaps/9-14-class-recap.html" class="btn btn-tales-one">Read More</a>
+                                </div>
+                            </article>
+                        </div>
+						
+						<div class="col-md-6 col-sm-6">
+                            <article class=" blog-teaser">
+                                <header>
                                     <img src="img/campus-engagement-info-icon.png" alt="Campus Engagments">   <!-- Files ideally should be 123 x 123 px for thumbnails -->
                                     <h3><a href="pdf/campus-engagements-pdf.pdf">Campus Engagements</a></h3>
                                     <span class="meta">13 September 2016, Justice Adams</span>
